// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Label Component should be contains a Title with News Text 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowBold",
          "fontSize": 27,
          "letterSpacing": 2,
          "paddingLeft": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    Technology
     News
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 14,
          "paddingLeft": 16,
          "paddingTop": 2,
        },
      ]
    }
  >
    Hoje é, 
    24 de março de 2021
    .
  </Text>
</View>
`;

exports[`Header Label Component should be have a label color is white 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowBold",
          "fontSize": 27,
          "letterSpacing": 2,
          "paddingLeft": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    Science
     News
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 14,
          "paddingLeft": 16,
          "paddingTop": 2,
        },
      ]
    }
  >
    Hoje é, 
    24 de março de 2021
    .
  </Text>
</View>
`;

exports[`Header Label Component should be have a label with date label send by prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowBold",
          "fontSize": 27,
          "letterSpacing": 2,
          "paddingLeft": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    Technology
     News
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 14,
          "paddingLeft": 16,
          "paddingTop": 2,
        },
      ]
    }
  >
    Hoje é, 
    09 de maio de 1997
    .
  </Text>
</View>
`;

exports[`Header Label Component should be have a label with text send by props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowBold",
          "fontSize": 27,
          "letterSpacing": 2,
          "paddingLeft": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    Best Test
     News
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 14,
          "paddingLeft": 16,
          "paddingTop": 2,
        },
      ]
    }
  >
    Hoje é, 
    24 de março de 2021
    .
  </Text>
</View>
`;

exports[`Header Label Component should be have a label with today date label by default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowBold",
          "fontSize": 27,
          "letterSpacing": 2,
          "paddingLeft": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    Technology
     News
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 14,
          "paddingLeft": 16,
          "paddingTop": 2,
        },
      ]
    }
  >
    Hoje é, 
    24 de março de 2021
    .
  </Text>
</View>
`;

exports[`Header Label Component should be must contain a date with white label color 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowBold",
          "fontSize": 27,
          "letterSpacing": 2,
          "paddingLeft": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    Science
     News
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 14,
          "paddingLeft": 16,
          "paddingTop": 2,
        },
      ]
    }
  >
    Hoje é, 
    24 de março de 2021
    .
  </Text>
</View>
`;
